tests/error/connect_except.gw
#! [contains] UgenConnectException
UGen @u;
adc => u;
